[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "overprint"
version = "1.0.0"
authors = [
  { name="pyth0g", email="" },
]
description = "A package that makes it easy to print to the same line again."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Windows",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"