[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "printover"
version = "1.0.1"
authors = [
  { name="pyth0g", email="" },
]
description = "A package that makes it easy to print to the same line again."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pyth0g/Overprint"
Issues = "https://github.com/pyth0g/Overprint/issues"